Closed
Bug 396197
Opened 18 years ago
Closed 17 years ago
Leaking imgSurf again in nsCanvasRenderingContext2D::DrawImage
Categories
(Core :: Graphics: Canvas2D, defect)
Core
Graphics: Canvas2D
Tracking
()
RESOLVED
FIXED
mozilla1.9beta3
People
(Reporter: philip, Assigned: philip)
Details
(Keywords: memory-leak)
Attachments
(1 file, 1 obsolete file)
1.24 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Opera/9.23 (X11; Linux i686; U; en)
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a8pre) Gecko/2007091418 Minefield/3.0a8pre
As in bug 333672, some code paths (in this case, when FloatValidate fails) return immediately instead of running the cleanup code.
Reproducible: Always
Assignee | ||
Comment 1•18 years ago
|
||
Comment 2•17 years ago
|
||
Philip, could you ask vlad for review on the patch?
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Updated•17 years ago
|
Attachment #280915 -
Flags: review?(vladimir)
Updated•17 years ago
|
Assignee: nobody → philip.taylor
Attachment #280915 -
Flags: review?(vladimir) → review+
Updated•17 years ago
|
Attachment #280915 -
Flags: approval1.9?
Comment 3•17 years ago
|
||
Comment on attachment 280915 [details] [diff] [review]
patch
a=beltzner for 1.9
Attachment #280915 -
Flags: approval1.9? → approval1.9+
Updated•17 years ago
|
Keywords: checkin-needed
Comment 4•17 years ago
|
||
Attachment #280915 -
Attachment is obsolete: true
Comment 5•17 years ago
|
||
Checking in content/canvas/src/nsCanvasRenderingContext2D.cpp;
/cvsroot/mozilla/content/canvas/src/nsCanvasRenderingContext2D.cpp,v <-- nsCanvasRenderingContext2D.cpp
new revision: 1.110; previous revision: 1.109
done
Status: NEW → RESOLVED
Closed: 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
Version: unspecified → Trunk
You need to log in
before you can comment on or make changes to this bug.
Description
•