Bug 396197 - "Leaking imgSurf again in nsCanvasRenderingContext2D::DrawImage" [p=philip.taylor@cl.cam.ac.uk (Philip Taylor) r=vlad a1.9=beltzner]